// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assign-user GET /assign-case-officer/check-details should render the case officer check details page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
            <h1 class="govuk-heading-l">Check details and assign case officer</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case officer</dt>
                    <dd class="govuk-summary-list__value">Smith, John
                        <br>John.Smith@planninginspectorate.gov.uk</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-case-officer/search-case-officer">Change <span class="govuk-visually-hidden">Address</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Assign case officer</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`assign-user GET /assign-case-officer/search-case-officer should render the search for case officer page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062  - Assign case officer</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Search for case officer by name or email address</label></h1>
                    <select class="govuk-select accessible-autocomplete" id="users" name="user"
                    data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                    </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`assign-user GET /assign-inspector/check-details should render the inspector check details page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
            <h1 class="govuk-heading-l">Check details and assign inspector</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                    <dd class="govuk-summary-list__value">Smith, John
                        <br>John.Smith@planninginspectorate.gov.uk</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-inspector/search-inspector">Change <span class="govuk-visually-hidden">Address</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Assign inspector</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`assign-user GET /assign-inspector/search-inspector should render the search for inspector page with expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062  - Assign inspector</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Search for inspector by name or email address</label></h1>
                    <select class="govuk-select accessible-autocomplete" id="users" name="user"
                    data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                    </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`assign-user POST /assign-case-officer/search-case-officer should re-render the assign case officer page with the expected error message if a user is not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#user">Enter a case officer’s name or email address</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062  - Assign case officer</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Search for case officer by name or email address</label></h1>
                    <p id="users-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a case officer’s
                        name or email address</p>
                    <select class="govuk-select accessible-autocomplete govuk-select--error"
                    id="users" name="user" aria-describedby="users-error" data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                    </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`assign-user POST /assign-inspector/search-inspector should re-render the assign inspector page with the expected error message if a user is not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#user">Enter an inspector’s name or email address</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062  - Assign inspector</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate class="govuk-!-margin-bottom-5">
                <div class="govuk-form-group govuk-form-group--error">
                    <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-fieldset__legend--l" for="users"> Search for inspector by name or email address</label></h1>
                    <p id="users-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter an inspector’s
                        name or email address</p>
                    <select class="govuk-select accessible-autocomplete govuk-select--error"
                    id="users" name="user" aria-describedby="users-error" data-cy="search-users">
                        <option value=""></option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;923ac03b-9031-4cf4-8b17-348c274321f9&quot;,&quot;name&quot;:&quot;Smith, John&quot;,&quot;email&quot;:&quot;John.Smith@planninginspectorate.gov.uk&quot;}">Smith, John (John.Smith@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;2&quot;,&quot;name&quot;:&quot;Doe, Jane&quot;,&quot;email&quot;:&quot;Jane.Doe@planninginspectorate.gov.uk&quot;}">Doe, Jane (Jane.Doe@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;3&quot;,&quot;name&quot;:&quot;Bloggs, Joe&quot;,&quot;email&quot;:&quot;Joe.Bloggs@planninginspectorate.gov.uk&quot;}">Bloggs, Joe (Joe.Bloggs@planninginspectorate.gov.uk)</option>
                        <option value="{&quot;@odata.type&quot;:&quot;#microsoft.graph.user&quot;,&quot;id&quot;:&quot;4&quot;,&quot;name&quot;:&quot;Jenkins, Leeroy&quot;,&quot;email&quot;:&quot;Leeroy.Jenkins@planninginspectorate.gov.uk&quot;}">Jenkins, Leeroy (Leeroy.Jenkins@planninginspectorate.gov.uk)</option>
                    </select>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
